welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:27: error: value droite is not a member of Unit
def prochaincarreh() {gauche(); for (i <- 1 to 5) {avance()} droite();
                                                             ^